[package]
name = "easypem"
description = "A library to parse and write PEM format"
version = "0.1.0"
authors = ["Leo <leo881003@gmail.com>"]
license = "MIT"
exclude = [".gitignore"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.1"
pest_derive = "2.1.0"
base64 = "0.10.1"
lazy_static = "1.3.0"
hex = "0.3.2"
